# merkle-airdropper

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
app/utils/: index.ts
programs/merkle-airdrop/: Cargo.toml
programs/merkle-airdrop/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/merkle-airdrop/src/processor/: claim_token.rs  initialize_airdrop_state.rs  mod.rs  withdraw_tokens_from_vault.rs
tests/: merkle-airdrop.ts
